# chat-buddy

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
examples/: docker-compose.yml
src/chat_buddy/: buddy.py  main.py
